k8s/argocd-deploy/kiwix/templates/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kiwix-ingress
  namespace: kiwix
  labels:
    app.kubernetes.io/name: kiwix
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: wiki.home.k8s
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: kiwix-svc
                port:
                  number: 8080
